<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <!--Data item that holds the reminder details-->
        <variable
            name="reminderDataItem"
            type="com.udacity.project4.locationreminders.reminderslist.ReminderDataItem" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        tools:context=".locationreminders.ReminderDescriptionActivity">
        <!--TODO: add the design of the reminder details-->
        <TextView
            android:id="@+id/lblTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:baselineAligned="false"
            android:gravity="center"
            android:text="@string/tv_reminder_title"
            android:textSize="@dimen/text_size_normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@{reminderDataItem.title}"
            android:textSize="@dimen/text_size_medium"
            app:layout_constraintBaseline_toBaselineOf="@+id/lblTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/lblDesc"
            tools:text="TextView" />

        <TextView
            android:id="@+id/lblLocName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:baselineAligned="false"
            android:gravity="center"
            android:text="@string/tv_location_name"
            android:textSize="@dimen/text_size_normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <TextView
            android:id="@+id/lblLocName3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:baselineAligned="false"
            android:gravity="center"
            android:text="@string/tv_coordinates"
            android:textSize="@dimen/text_size_normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLocationName" />

        <TextView
            android:id="@+id/tvLocationName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@{reminderDataItem.location}"
            android:textSize="@dimen/text_size_medium"
            app:layout_constraintBaseline_toBaselineOf="@+id/lblLocName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/lblDesc"
            tools:text="TextView" />


        <TextView
            android:id="@+id/tvCoordinates"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@{ @string/tv_location_coordinatest_str(reminderDataItem.latitude,reminderDataItem.longitude)}"
            android:textSize="@dimen/text_size_medium"
            app:layout_constraintBaseline_toBaselineOf="@+id/lblLocName3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/lblDesc"
            tools:text="TextView" />

        <TextView
            android:id="@+id/lblDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:baselineAligned="false"
            android:gravity="center"
            android:text="@string/tv_reminder_description"
            android:textSize="@dimen/text_size_normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblLocName3" />

        <TextView
            android:id="@+id/tvDesc"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:textSize="@dimen/text_size_large"
            android:text="@{reminderDataItem.description}"
            app:layout_constraintBottom_toTopOf="@+id/btnOk"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.082"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblDesc"
            tools:text="TextView" />


        <Button
            android:id="@+id/btnOk"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/btn_ok"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>